ejercicio 13 python+sql verificado y terminado

--- a/Python/modulo-1-ejercicio-13-sql_python.ipynb
+++ b/Python/modulo-1-ejercicio-13-sql_python.ipynb
@@ -1161,29 +1161,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mysql.connector.connection.MySQLConnection object at 0x7fb4292a4280>\n",
-      "    order_date  COUNT(order_date)\n",
-      "0   1998-02-26                  6\n",
-      "1   1998-03-03                  4\n",
-      "2   1998-03-06                  4\n",
-      "3   1998-03-11                  4\n",
-      "4   1998-03-16                  4\n",
-      "..         ...                ...\n",
-      "475 1997-11-26                  1\n",
-      "476 1997-12-01                  1\n",
-      "477 1997-12-04                  1\n",
-      "478 1997-12-09                  1\n",
-      "479 1997-12-12                  1\n",
-      "\n",
-      "[480 rows x 2 columns]\n"
+      "<mysql.connector.connection.MySQLConnection object at 0x7fb3408f7400>\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_date</th>\n",
+       "      <th>COUNT(order_date)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1998-02-26</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1998-03-03</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1998-03-06</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1998-03-11</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1998-03-16</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>475</th>\n",
+       "      <td>1997-11-26</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476</th>\n",
+       "      <td>1997-12-01</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>1997-12-04</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>1997-12-09</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>479</th>\n",
+       "      <td>1997-12-12</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>480 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    order_date  COUNT(order_date)\n",
+       "0   1998-02-26                  6\n",
+       "1   1998-03-03                  4\n",
+       "2   1998-03-06                  4\n",
+       "3   1998-03-11                  4\n",
+       "4   1998-03-16                  4\n",
+       "..         ...                ...\n",
+       "475 1997-11-26                  1\n",
+       "476 1997-12-01                  1\n",
+       "477 1997-12-04                  1\n",
+       "478 1997-12-09                  1\n",
+       "479 1997-12-12                  1\n",
+       "\n",
+       "[480 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1203,7 +1295,7 @@
     "\n",
     "sql = \"SELECT order_date, COUNT(order_date) FROM orders GROUP BY order_date ORDER BY COUNT(order_date) DESC;\"\n",
     "df = pd.read_sql_query(sql, cnx)\n",
-    "print (df)\n",
+    "display (df)\n",
     "#Lo siguiente es un wrap up que funciona tanto con una tabla como con una consulta SQL.\n",
     "#pd.read_sql(sql, cnx)\n",
     "\n",
@@ -1213,46 +1305,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mysql.connector.connection.MySQLConnection object at 0x7fb44913bf40>\n",
-      "     order_id customer_id order_date shipped_date  employee_id first_name  \\\n",
-      "0       10258       ERNSH 1996-07-17   1996-07-23            1      Nancy   \n",
-      "1       10270       WARTH 1996-08-01   1996-08-02            1      Nancy   \n",
-      "2       10275       MAGAA 1996-08-07   1996-08-09            1      Nancy   \n",
-      "3       10285       QUICK 1996-08-20   1996-08-26            1      Nancy   \n",
-      "4       10292       TRADH 1996-08-28   1996-09-02            1      Nancy   \n",
-      "..        ...         ...        ...          ...          ...        ...   \n",
-      "118     11064       SAVEA 1998-05-01   1998-05-04            1      Nancy   \n",
-      "119     11067       DRACD 1998-05-04   1998-05-06            1      Nancy   \n",
-      "120     11069       TORTU 1998-05-04   1998-05-06            1      Nancy   \n",
-      "121     11071       LILAS 1998-05-05          NaT            1      Nancy   \n",
-      "122     11077       RATTC 1998-05-06          NaT            1      Nancy   \n",
-      "\n",
-      "    last_name  \n",
-      "0     Davolio  \n",
-      "1     Davolio  \n",
-      "2     Davolio  \n",
-      "3     Davolio  \n",
-      "4     Davolio  \n",
-      "..        ...  \n",
-      "118   Davolio  \n",
-      "119   Davolio  \n",
-      "120   Davolio  \n",
-      "121   Davolio  \n",
-      "122   Davolio  \n",
-      "\n",
-      "[123 rows x 7 columns]\n"
+      "<mysql.connector.connection.MySQLConnection object at 0x7fb351db2dc0>\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>order_date</th>\n",
+       "      <th>shipped_date</th>\n",
+       "      <th>employee_id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10258</td>\n",
+       "      <td>ERNSH</td>\n",
+       "      <td>1996-07-17</td>\n",
+       "      <td>1996-07-23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nancy</td>\n",
+       "      <td>Davolio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10270</td>\n",
+       "      <td>WARTH</td>\n",
+       "      <td>1996-08-01</td>\n",
+       "      <td>1996-08-02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nancy</td>\n",
+       "      <td>Davolio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10275</td>\n",
+       "      <td>MAGAA</td>\n",
+       "      <td>1996-08-07</td>\n",
+       "      <td>1996-08-09</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nancy</td>\n",
+       "      <td>Davolio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10285</td>\n",
+       "      <td>QUICK</td>\n",
+       "      <td>1996-08-20</td>\n",
+       "      <td>1996-08-26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nancy</td>\n",
+       "      <td>Davolio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10292</td>\n",
+       "      <td>TRADH</td>\n",
+       "      <td>1996-08-28</td>\n",
+       "      <td>1996-09-02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nancy</td>\n",
+       "      <td>Davolio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>11064</td>\n",
+       "      <td>SAVEA</td>\n",
+       "      <td>1998-05-01</td>\n",
+       "      <td>1998-05-04</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nancy</td>\n",
+       "      <td>Davolio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>11067</td>\n",
+       "      <td>DRACD</td>\n",
+       "      <td>1998-05-04</td>\n",
+       "      <td>1998-05-06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nancy</td>\n",
+       "      <td>Davolio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>11069</td>\n",
+       "      <td>TORTU</td>\n",
+       "      <td>1998-05-04</td>\n",
+       "      <td>1998-05-06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nancy</td>\n",
+       "      <td>Davolio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>11071</td>\n",
+       "      <td>LILAS</td>\n",
+       "      <td>1998-05-05</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nancy</td>\n",
+       "      <td>Davolio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>11077</td>\n",
+       "      <td>RATTC</td>\n",
+       "      <td>1998-05-06</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nancy</td>\n",
+       "      <td>Davolio</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>123 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     order_id customer_id order_date shipped_date  employee_id first_name  \\\n",
+       "0       10258       ERNSH 1996-07-17   1996-07-23            1      Nancy   \n",
+       "1       10270       WARTH 1996-08-01   1996-08-02            1      Nancy   \n",
+       "2       10275       MAGAA 1996-08-07   1996-08-09            1      Nancy   \n",
+       "3       10285       QUICK 1996-08-20   1996-08-26            1      Nancy   \n",
+       "4       10292       TRADH 1996-08-28   1996-09-02            1      Nancy   \n",
+       "..        ...         ...        ...          ...          ...        ...   \n",
+       "118     11064       SAVEA 1998-05-01   1998-05-04            1      Nancy   \n",
+       "119     11067       DRACD 1998-05-04   1998-05-06            1      Nancy   \n",
+       "120     11069       TORTU 1998-05-04   1998-05-06            1      Nancy   \n",
+       "121     11071       LILAS 1998-05-05          NaT            1      Nancy   \n",
+       "122     11077       RATTC 1998-05-06          NaT            1      Nancy   \n",
+       "\n",
+       "    last_name  \n",
+       "0     Davolio  \n",
+       "1     Davolio  \n",
+       "2     Davolio  \n",
+       "3     Davolio  \n",
+       "4     Davolio  \n",
+       "..        ...  \n",
+       "118   Davolio  \n",
+       "119   Davolio  \n",
+       "120   Davolio  \n",
+       "121   Davolio  \n",
+       "122   Davolio  \n",
+       "\n",
+       "[123 rows x 7 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Extraer los pedidos hechos por \"Nancy Daviolo\". Tendréis que hacer una subquery.\n",
+    "# Extraer los pedidos hechos por \"Nancy Daviolo\". Tendréis que hacer una subquery.   \n",
     "\n",
     "import mysql.connector\n",
     "import pandas as pd\n",
@@ -1267,9 +1511,9 @@
     "\n",
     "sql = \"SELECT orders.order_id, orders.customer_id, orders.order_date, shipped_date,orders.employee_id, employees.first_name, employees.last_name FROM orders INNER JOIN employees ON orders.employee_id= employees.employee_id WHERE orders.employee_id= 1;\"\n",
     "df = pd.read_sql_query(sql, cnx)\n",
-    "print (df)\n",
+    "display (df)\n",
     "\n",
-    "cnx.close()"
+    "cnx.close()\n"
    ]
   },
   {
