--- a/VERO_parctica-ejercicio-12.ipynb
+++ b/VERO_parctica-ejercicio-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        " 'From: \"MR. JAMES NGOLA.\" <james_ngola2002@maktoob.com>']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['From: \"Mr. Ben Suleman\" <bensul2004nng@spinfinder.com>',\n",
+       " 'From: \"MR. JAMES NGOLA.\" <james_ngola2002@maktoob.com>']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nmme= re.findall('From:.*', email)\n",
+    "nmme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +178,7 @@
        "['bensul2004nng@spinfinder.com', 'james_ngola2002@maktoob.com']"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,12 +186,12 @@
    "source": [
     "email_remitente= '\\w+\\d+\\w+@\\w+\\.com'\n",
     "correo_info_remitente= re.findall(email_remitente, info_remitente)\n",
-    "correo_info_remitente"
+    "correo_info_remitente\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"['bensul2004nng@spinfinder.com', 'bensul2004nng@spinfinder.com', 'bensul2004nng@spinfinder.com', 'james_ngola2002@maktoob.com', 'james_ngola2002@maktoob.com', 'james_ngola2002@maktoob.com', 'james_ngola2002@maktoob.com', 'james_ngola2002@maktoob.com']\""
+       "\"['bensul2004nng@spinfinder.com', 'james_ngola2002@maktoob.com']\""
       ]
      },
-     "execution_count": 49,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +242,7 @@
        "'[\\'From: \"Mr. Ben Suleman\" <bensul2004nng@spinfinder.com>\\', \\'From: \"MR. JAMES NGOLA.\" <james_ngola2002@maktoob.com>\\']'"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,22 +254,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (2861123586.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/pq/y6t79q9j1z1gmlz1ggd9dck80000gn/T/ipykernel_99281/2861123586.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    nombre_remitente= '^[.*\\'\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 0), match=''>\n"
      ]
     }
    ],
    "source": [
     "#REVISAR\n",
     "\n",
-    "nombre_remitente= ''\n",
+    "nombre_remitente= '' \n",
     "\n",
     "info_nombre_remitente = re.search(nombre_remitente,info_remitente)\n",
     "print(info_nombre_remitente)\n"
@@ -255,16 +276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' Ben Suleman'"
+       "''"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +315,7 @@
        "['Date: Thu, 31 Oct 2002 05:10:00', 'Date: Thu, 31 Oct 2002 02:38:20 +0000']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +336,7 @@
        "<re.Match object; span=(314, 325), match='Thu, 31 Oct'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +358,7 @@
        "'Thu, 31 Oct'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +390,7 @@
        " 'Subject: URGENT BUSINESS ASSISTANCE AND PARTNERSHIP']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +411,7 @@
        "<re.Match object; span=(373, 408), match='URGENT ASSISTANCE /RELATIONSHIP (P)'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +433,7 @@
        "'URGENT ASSISTANCE /RELATIONSHIP (P)'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,19 +453,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'email': ' Ben Suleman',\n",
+       "{'email': '',\n",
        " 'date': 'Thu, 31 Oct',\n",
-       " 'nombre': ' Ben Suleman',\n",
+       " 'nombre': '',\n",
        " 'asunto': 'URGENT ASSISTANCE /RELATIONSHIP (P)'}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +498,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -491,12 +512,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7ad202eda4b463b15866ae6aadf94c3d2752d74520fedda13d68ef6e8aba5314"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
