funcion 2 de ejercicio 11 ficheros resuelta

--- a/Python/modulo-1-ejercicio-11-ficheros.ipynb
+++ b/Python/modulo-1-ejercicio-11-ficheros.ipynb
@@ -1,48 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creación de carpetas y movimientos entre ellas"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---------------------------------- PRIMERA FUNCIÓN -----------------------\n",
+    "<!-- ---------------------------------- PRIMERA FUNCIÓN -----------------------\n",
+    "Esta función debe incluir el código que:\n",
     "Nos muestre en que carpeta estamos trabajando.\n",
     "Cree una carpeta que se llame \"aprendiendo-ficheros\". ⚠️ Tened en cuenta que si la carpeta ya existe no la podemos crear, nos devolverá un error. Incluye en la función un programa que evite que nos de un error si la carpeta ya existe.\n",
     "Cree otra carpeta que se llame \"datos\" dentro de la carpeta \"aprendiendo-ficheros\". En esta carpeta \"datos\" guardaremos el fichero \"saludo.txt\" que os habéis descargado.\n",
     "Cambiad el directorio de trabajo a la carpeta \"datos\". Antes de seguir chequead que estáis trabajando en la carpeta \"datos\".\n",
     "Cambiad el nombre de la carpeta creada en el punto 2 a \"primera-toma-contacto\"\n",
-    "💡 Pistas para resolver este ejercicio 💡\n",
+    "💡 Pistas para resolver este ejercicio 💡 Esta función debe incluir el código que:\n",
     "La función tendrá que recibir 3 parámetros:\n",
     "El nombre del nombre de la primera carpeta\n",
     "El nombre de la carpeta segunda carpeta\n",
     "El nombre con el que queramos cambiar el nombre de la primera carpeta creada\n",
     "Para saber si las carpetas ya existen tendréis que usar lstdir(recordad que nos devuelve una lista de ficheros y carpetas).\n",
     "Para poder controlar los errores tendremos que usar un if loop, que si el fichero existe, nos devuelva un mensaje de que el fichero ya existe. En caso de que no exista, los deberéis crear y que la función nos muestre un mensaje de que se ha creado.\n",
-    "Tendréis que ir cambiando de directorio para poder crear las carpetas y cambiar sus nombres.\n",
-    "---------------------------------- SEGUNDA FUNCIÓN -----------------------\n",
-    "📌 Antes de empezar, recordad descargaros el fichero saludo.txt y guardarlo en el repo en el que estáis trabajando, dentro de una carpeta que se llame \"datos\".\n",
-    "Lea el fichero que se llame \"saludo.txt y muestre su contenido completo.\n",
-    "Muestra la línea 4 del fichero\n",
-    "💡 Pistas para resolver este ejercicio 💡\n",
-    "Antes de empezar, tendréis que saber cuál es vuestro directorio de trabajo.\n",
-    "Tened en cuenta en que carpeta estáis. Si vuestro directorio de trabajo no es \"datos\" tendréis que cambiarlo o poner la ruta relativa a la carpeta \"datos\".\n",
-    "Usar if... else para evitar que se nos pare el código.\n",
-    "Para cambiar el fichero podréis usar el comando input para preguntar el usuario donde está el fichero y que se pueda usar la ruta relativa o absoluta.\n",
-    "Lectura y escritura de ficheros\n",
-    "La función debe recibir 4 parámetros:\n",
-    "Nombre del fichero, incluyendo la extensión.\n",
-    "Como queremos leer el fichero.\n",
-    "El encoding del fichero.\n",
-    "El contenido que queremos escribir en el fichero.\n",
-    "Condiciones de la función:\n",
-    "Si el fichero no existe, debe crearlo, insertar contenido y mostrar su contenido.\n",
-    "Si el fichero existe pregunta al usuario si quiere sobreescribirlo. En caso de Si, sobreescribe el fichero, insertad contenido y leedlo. En caso de No, no hace nada.\n",
-    "💡 Pistas 💡\n",
-    "Para chequear si un fichero existe, podemos usar la función os.listdir() que devuelve una lista con los nombres de los ficheros que hay en un directorio.\n",
-    "Para crear un fichero, podemos usar la función open() que recibe como parámetros el nombre del fichero, el modo de apertura y el encoding.\n",
-    "Para chequear si el fichero existe debéis usar los for loops y el método in para comprobar si el nombre del fichero está en la lista de ficheros.\n",
-    "Usar un input para preguntar al usuario si quiere sobreescribir el fichero.\n",
-    "Para sobreescribir el fichero, podemos usar la función open() que recibe como parámetros el nombre del fichero, el modo de apertura y el encoding.\n",
-    "Strings que cubren más que una línea tienen que ser iniciados y cerrados con tres comillas \"\"\"."
+    "Tendréis que ir cambiando de directorio para poder crear las carpetas y cambiar sus nombres. -->"
    ]
   },
   {
@@ -51,11 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Nos muestre en que carpeta estamos trabajando.\n",
-    "# Cree una carpeta que se llame \"aprendiendo-ficheros\". ⚠️ Tened en cuenta que si la carpeta ya existe no la podemos crear, nos devolverá un error. Incluye en la función un programa que evite que nos de un error si la carpeta ya existe.\n",
-    "# Cree otra carpeta que se llame \"datos\" dentro de la carpeta \"aprendiendo-ficheros\". En esta carpeta \"datos\" guardaremos el fichero \"saludo.txt\" que os habéis descargado.\n",
-    "# Cambiad el directorio de trabajo a la carpeta \"datos\". Antes de seguir chequead que estáis trabajando en la carpeta \"datos\".\n",
-    "# Cambiad el nombre de la carpeta creada en el punto 2 a \"primera-toma-contacto\"\n",
+    "\n",
     "import os\n",
     "\n",
     "def ficheros(nom_1,nom_2,nom_nuevo):\n",
@@ -107,6 +88,76 @@
    "source": [
     "print(os.getcwd())\n",
     "ficheros(\"aprendiendo-ficheros\", \"datos\",\"primera-toma-contacto\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ---------------------------------- SEGUNDA FUNCIÓN -----------------------\n",
+    "# 📌 Antes de empezar, recordad descargaros el fichero saludo.txt y guardarlo en el repo en el que estáis trabajando, dentro de una carpeta que se llame \"datos\".\n",
+    "# Lea el fichero que se llame \"saludo.txt y muestre su contenido completo.\n",
+    "# Muestra la línea 4 del fichero\n",
+    "# 💡 Pistas para resolver este ejercicio 💡\n",
+    "# Antes de empezar, tendréis que saber cuál es vuestro directorio de trabajo.\n",
+    "# Tened en cuenta en que carpeta estáis. Si vuestro directorio de trabajo no es \"datos\" tendréis que cambiarlo o poner la ruta relativa a la carpeta \"datos\".\n",
+    "# Usar if... else para evitar que se nos pare el código.\n",
+    "# Para cambiar el fichero podréis usar el comando input para preguntar el usuario donde está el fichero y que se pueda usar la ruta relativa o absoluta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ruta del fichero: 'primera-toma-contacto/datos'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "def lectura(nombre_archivo):\n",
+    "    input_direccion=input(\"Cuál es la dirección del archivo que deseas leer?\")\n",
+    "    direccion=os.listdir(input_direccion)\n",
+    "    \n",
+    "    if nombre_archivo in direccion:\n",
+    "        f = open(input_direccion+'/'+nombre_archivo)\n",
+    "        lines = f.readlines()\n",
+    "        print(f\"Este es el fichero completo: {lines}\")\n",
+    "        print (f\"Esta es la linea 4 del fichero: {lines[3]}\")\n",
+    "        f.close()\n",
+    "        \n",
+    "    else:\n",
+    "        pass\n",
+    "  \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Este es el fichero completo: ['Hola Adalabers!!!\\n', '\\n', 'Estamos en la sesión de pair-programming para familiarizarnos con la gestión de carpetas y ficheros desde Python 🙂🌊\\n', '\\n', 'Esto esta siendo suuuper divertidooooo']\n",
+      "Esta es la linea 4 del fichero: \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lectura('saludo.txt')"
    ]
   },
   {
@@ -287,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,22 +371,24 @@
     "\n",
     "    print('DESCRIPTION AND TITLE')   #Revisar con Diana\n",
     "    \n",
-    "    for element in raiz.findall('movie'):\n",
-    "        print(element.find('description').text)\n",
-    "    for subelement in raiz.findall('genre'):\n",
-    "        print(subelement.find('decade').text)\n"
+    "    for element in raiz:\n",
+    "        for child in element:\n",
+    "            for subchild in child:\n",
+    "                print('title:', subchild.attrib['title'])\n",
+    "                print('description:', subchild.find('description').text)\n",
+    "    \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "collection\n",
       "TAGS Y ATRIBUTOS\n",
       "genre: Es un hijo de la raíz: collection\n",
       "genre: Es un hijo de la raíz: collection\n",
@@ -359,10 +412,27 @@
       "{}: Es un atributo de movie\n",
       "{}: Es un atributo de movie\n",
       "DESCRIPTION AND TITLE\n",
-      "\n",
-      "            \n",
-      "\n",
-      "            \n"
+      "title: Indiana Jones: The raiders of the lost Ark\n",
+      "description: \n",
+      "                'Archaeologist and adventurer Indiana Jones \n",
+      "                is hired by the U.S. government to find the Ark of  the Covenant before the Nazis.'\n",
+      "                \n",
+      "title: THE KARATE KID\n",
+      "description: None provided.\n",
+      "title: Back 2 the Future\n",
+      "description: Marty McFly\n",
+      "title: X-Men\n",
+      "description: Two mutants come to a private academy for their kind whose resident superhero team must oppose a terrorist organization with similar powers.\n",
+      "title: Batman Returns\n",
+      "description: NA.\n",
+      "title: Reservoir Dogs\n",
+      "description: WhAtEvER I Want!!!?!\n",
+      "title: ALIEN\n",
+      "description: \"\"\"\"\"\"\"\"\"\n",
+      "title: Ferris Bueller's Day Off\n",
+      "description: Funny movie on funny guy \n",
+      "title: American Psycho\n",
+      "description: psychopathic Bateman\n"
      ]
     }
    ],
