ejercicios completados, queda pendiente busqueda de errores

--- a/Python/modulo-1-ejercicio-11-ficheros.ipynb
+++ b/Python/modulo-1-ejercicio-11-ficheros.ipynb
@@ -369,7 +369,7 @@
     "    for subsubsubchild in subsubchild:\n",
     "        print(f'{subsubsubchild.attrib}: Es un atributo de {subsubchild.tag}')  \n",
     "\n",
-    "    print('DESCRIPTION AND TITLE')   #Revisar con Diana\n",
+    "    print('DESCRIPTION AND TITLE')   \n",
     "    \n",
     "    for element in raiz:\n",
     "        for child in element:\n",
