--- a/Python/modulo-1-ejercicio-12-regex.ipynb
+++ b/Python/modulo-1-ejercicio-12-regex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        " 'From: \"MR. JAMES NGOLA.\" <james_ngola2002@maktoob.com>']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,54 +147,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['bensul2004nng@spinfinder.com',\n",
-       " 'bensul2004nng@spinfinder.com',\n",
-       " 'bensul2004nng@spinfinder.com',\n",
-       " 'james_ngola2002@maktoob.com',\n",
-       " 'james_ngola2002@maktoob.com',\n",
-       " 'james_ngola2002@maktoob.com',\n",
-       " 'james_ngola2002@maktoob.com',\n",
-       " 'james_ngola2002@maktoob.com']"
+       "['bensul2004nng@spinfinder.com', 'james_ngola2002@maktoob.com']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "email_remitente= '\\w+\\d+\\w+@\\w+\\.com'\n",
-    "info_remitente= re.findall(email_remitente, email)\n",
-    "info_remitente"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for email in info_remitente:\n",
-    "    info_remitente=re.findall('\\w+\\d+\\w+.\\.com',email)\n",
-    "info_remitente\n",
-    "    "
+    "correo_info_remitente= re.findall(email_remitente, info_remitente)\n",
+    "correo_info_remitente\n"
    ]
   },
   {
@@ -212,44 +182,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<re.Match object; span=(256, 267), match='Ben Suleman'>"
+       "['\"Mr. Ben Suleman\"', '\"MR. JAMES NGOLA.\"']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nombre_remitente= '[B]\\w+\\s[S]\\w+'\n",
-    "info_nombre_remitente = re.search(nombre_remitente,email)\n",
+    "info_remitente = str(re.findall('From:.*',email))\n",
+    "info_remitente\n",
+    "\n",
+    "nombre_remitente= '\\\"[^\\\"]+\\\"' \n",
+    "\n",
+    "info_nombre_remitente = re.findall(nombre_remitente,info_remitente)\n",
     "info_nombre_remitente"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Ben Suleman'"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "info_nombre_remitente.group()"
    ]
   },
   {
@@ -285,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +248,7 @@
        "<re.Match object; span=(314, 325), match='Thu, 31 Oct'>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +270,7 @@
        "'Thu, 31 Oct'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +323,7 @@
        "<re.Match object; span=(373, 408), match='URGENT ASSISTANCE /RELATIONSHIP (P)'>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +345,7 @@
        "'URGENT ASSISTANCE /RELATIONSHIP (P)'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,25 +365,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'email': 'bensul2004nng@spinfinder.com',\n",
+       "{'email': ['\"Mr. Ben Suleman\"', '\"MR. JAMES NGOLA.\"'],\n",
        " 'date': 'Thu, 31 Oct',\n",
-       " 'nombre': 'Ben Suleman',\n",
+       " 'nombre': ['\"Mr. Ben Suleman\"', '\"MR. JAMES NGOLA.\"'],\n",
        " 'asunto': 'URGENT ASSISTANCE /RELATIONSHIP (P)'}"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict_email={'email':info_remitente.group(), 'date': info_dia_email.group(), 'nombre':info_nombre_remitente.group(),'asunto':info_asunto_email.group()}\n",
+    "dict_email={'email':info_nombre_remitente, 'date': info_dia_email.group(), 'nombre':info_nombre_remitente,'asunto':info_asunto_email.group()}\n",
     "dict_email"
    ]
   },
