--- a/Python/modulo-1-ejercicio-8-funciones.ipynb
+++ b/Python/modulo-1-ejercicio-8-funciones.ipynb
@@ -170,32 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'recede'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "palabra=\"Recede\"\n",
-    "palabra= palabra.lower()\n",
-    "palabra"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "palabra=\"Success\"\n",
+    "palabra= palabra.lower()\n",
+    "palabra\n",
+    "\n",
     "nuevo=\"\"\n",
     "\n",
     "for i in palabra:\n",
@@ -207,95 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'()()()'"
+       "')())())'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nuevo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def repetidas(letra):\n",
-    "    lista_letra= letra\n",
-    "    for l in letra:\n",
-    "        if l in letra :\n",
-    "            return (\"(\")\n",
-    "        \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def repetidas(palabra):\n",
-    "    if palabra in palabra :\n",
-    "        resultado= len(palabra)\n",
-    "        return (\"(\"*resultado)\n",
-    "    elif palabra in palabra:\n",
-    "        mensaje= palabra.replace(palabra,\")\")\n",
-    "        return mensaje\n",
-    "    \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'(((((('"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "repetidas(\"recede\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def repetidas(palabra):\n",
-    "    for l in palabra:\n",
-    "    \n",
-    "        resultado= len(palabra)\n",
-    "        return (\"(\"*resultado)\n",
-    "       "
    ]
   }
  ],
