--- a/Python/modulo-1-ejercicio-13-sql_python.ipynb
+++ b/Python/modulo-1-ejercicio-13-sql_python.ipynb
@@ -5,7 +5,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Python + SQL 1"
+   ]
   },
   {
    "cell_type": "code",
