se agregaron comentarios en ejercicios 8,9 y 10 de python

--- a/Python/modulo-1-ejercicio-8-funciones.ipynb
+++ b/Python/modulo-1-ejercicio-8-funciones.ipynb
@@ -21,20 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sumar(a,b):\n",
     "   \n",
-    "    suma=int(a)+int(b)\n",
-    "    suma= str(suma)\n",
-    "    if a== (\"\") and b == (\"\"):\n",
+    "    suma=int(a)+int(b) #empezamos por convertir los str en int para poder utilizarlos como int\n",
+    "    suma= str(suma)       #definimos fuera para poder utilizarlas dentro, convertimos a str para que se ponga como str el resultado\n",
+    "    if a== (\"\") and b == (\"\"): #si los str están vacíos, entonces sumarán 0\n",
     "        a = 0\n",
     "        b = 0\n",
     "        suma=int(a)+int(b)\n",
     "        suma= str(suma)\n",
-    "    elif a == (\"\"): \n",
+    "    elif a == (\"\"):  #si solo 1 de los str está vacío sólo ese sumará cero\n",
     "        a = 0\n",
     "        suma=int(a)+int(b)\n",
     "        suma= str(suma)\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "'-2'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,36 +93,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(13, 23), (64, 14), (15, 53), (17, 17), (88, 80)]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "lista_tuplas=list(zip(lista1,lista2))"
+    "lista_tuplas=list(zip(lista1,lista2)) \n",
+    "lista_tuplas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def numero_mayor():\n",
-    "\n",
+    "    lista_tuplas=list(zip(lista1,lista2)) #primero hacemos una lista de tuplas para poder iterar por ambos números\n",
     "    lista_numero_mayor=[]\n",
     "\n",
     "    for i in lista_tuplas:\n",
-    "        if i[0] > i[1]:\n",
-    "            lista_numero_mayor.append(i[0])\n",
+    "        if i[0] > i[1]:     \n",
+    "            lista_numero_mayor.append(i[0]) #si el primer número de la tupla es mayor que el otro se agrega a lista_numero_mayor\n",
     "        elif i[0] < i[1]:\n",
-    "            lista_numero_mayor.append(i[1])\n",
-    "    return lista_numero_mayor\n",
+    "            lista_numero_mayor.append(i[1]) #si el segundo número de la tupla es mayor, se agrega a la lista\n",
+    "    return lista_numero_mayor #devolviendo una lista con los números mayores encontrados en la iteracion\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +143,7 @@
        "[23, 64, 53, 88]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,15 +187,15 @@
    "outputs": [],
    "source": [
     "palabra=\"Success\"\n",
-    "palabra= palabra.lower()\n",
+    "palabra= palabra.lower() #pasamos la palabra a minúsculas para poder identificar las letras repetidas\n",
     "palabra\n",
     "\n",
-    "nuevo=\"\"\n",
+    "nuevo=\"\" #variable vacía para que como resultado del bucle for se vayan agregando los paréntesis\n",
     "\n",
-    "for i in palabra:\n",
-    "    if palabra.count(i)==1:\n",
+    "for i in palabra:           #iteramos por cada elemento de la palabra\n",
+    "    if palabra.count(i)==1:  #si un elemento está solo 1 vez, agregaremos un (\n",
     "        nuevo+=\"(\"\n",
-    "    else:\n",
+    "    else:                   #si el elemento está más de 1 vez, entonces se agregará un )\n",
     "       nuevo+= \")\""
    ]
   },
