--- a/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
+++ b/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
@@ -265,18 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def es_primo (numero):\n",
-    "    if numero <=1:\n",
+    "    if numero <=1: #por definición si el número es negativo o 0, no es primo\n",
     "        return False\n",
-    "    elif numero==2:\n",
+    "    elif numero==2: # el 2 es primo porque puede dividirse por 1 y por 2, respectivamente\n",
     "        return True\n",
     "    else:\n",
-    "        for i in range(2,numero):\n",
-    "            if numero%i==0:\n",
+    "        for i in range(2,numero): #generamos un rango para iterar desde el 2 hasta el número que ingresemos\n",
+    "            if numero%i==0: # si el número dividido entre 2 da como resultado 0, entonces no es primo\n",
     "                return False \n",
     "            else:\n",
     "                return True"
@@ -284,22 +284,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "es_primo(-1)"
+    "es_primo(5099)"
    ]
   },
   {
